# success_coach_ai

./: .gitignore  REVIEW_REPORT.md  defaults.py  pyproject.toml  streamlit_app.py  streamlit_ui.py
.cursor/agents/: code-review.md  milestone_review_guidelines.md
app/: prompts.py  streamlit_ui.py
app/services/: call_agent.py  chat_service.py  coach_chat_service.py  google_calendar_service.py  google_sheet_service.py  mem0_retrieval_service.py  mem0_service.py  mem0_upload_service.py  replan_alerts.py  student_chat_service.py
chroma_data/: chroma.sqlite3
chroma_db/: chroma_client.py
streamlit_pages/: chat_ui.py  coach_chat_ui.py  coach_ui.py  student_chat_ui.py  student_details.py
