[project]
name = "success-coach-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.10",
    "fastapi>=0.137.1",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langsmith[claude-agent-sdk]>=0.8.16",
    "markdown>=3.10.2",
    "mem0ai>=2.0.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-calendar>=1.4.0",
]
